# ctao_data_model

./: README.md  data_reduction.ipynb  data_reduction_4D.ipynb  datastore_lazy_loading.ipynb  pyproject.toml  simple_test.ipynb
ctao_data_model/: __init__.py  datasets_array.py  irf_group.py  vodf_observation.py
scripts/: irf_group.py  vodf_observation.py
